--- a/src/assets/style/var.scss
+++ b/src/assets/style/var.scss
@@ -1,5 +1,5 @@
 $border:1px solid hsla(0,0%,93%,.8);
-$mainColor:#ea6000;
+$mainColor:deepskyblue;
 $black:#22222d;
 $lightBlack:#55555d;
 $gray:#88888d;
